src/SFA.DAS.EAS.Web/src/sass/_custom.scss
/* ... */
//edit-started-apprentice
#edit-started-apprentice{
    .approve-alert{   
        margin-top:30px;
            .alert-blue{border-color:$link-hover-colour;}
    }
    .last-child{
        margin-bottom:0px;
    }
    strong{
        font-weight:bold;
    }
}



// pagination 
#manage-all-apprentices{
.previous-next-navigation {
  padding-left: 0;
  position: relative;
  overflow: hidden;
  margin: 60px 0 0;
  width: 100%; 
    li 
    {
      font-family: "nta", Arial, sans-serif;
      font-size: 20px;
      line-height: 1.11111;
      font-weight: 400;
      text-transform: none;
      font-size-adjust: 0.5;
      display: block;
      padding: 0;
      margin: 0;
      width: 50%;
      float: left; 
      a 
      {
      display: block;
      text-decoration: none; 
      font-size: 24px;
      line-height: 0.9em;
          span {
          display: block;
          font-family: "nta", Arial, sans-serif;
          font-size: 12px;
          line-height: 1.25;
          font-weight: 400;
          text-transform: none;
          font-size-adjust: 0.5; 
          }
          &:hover {
               background:$highlight-colour;
              .page-numbers {text-decoration: underline;}
          }
          &:focus{
               .page-numbers {text-decoration: underline;}
          }
      }
      
   }
    li.next 
    {
      float: right;
      text-align: right; 
          a {padding: 15px 35px 15px 0;}
          a:before {
          background: transparent url("/dist/css/images/pagination-arrow-sprite.png") no-repeat -102px -11px;
          margin: -4px -32px 0 0;
          display: block;
          float: right;
          width: 30px;
          height: 38px;
          content: " "; }
      }
    li.previous
        { 
        a{padding: 15px 0 15px 35px; }
        a:before 
        {
          background: transparent url("/dist/css/images/pagination-arrow-sprite.png") no-repeat -20px -11px;
          margin: -4px 0 0 -32px;
          display: block;
          float: left;
          width: 30px;
          height: 38px;
          content: " "; 
        }
        }
    }
}
// END -pagination styles


#stop-effective{
    .panel{
        margin-top: 20px;
        float: left;
      }
}

.js-hidden{
    display:none;
}



//all mobile media query breakpoints
//==================================
@media only screen and (max-device-width: 640px),
only screen and (max-device-width: 667px),
only screen and (max-width: 480px) {

#apprentice-details {
    .tableResponsive{
        margin-top:30px;
        .funding-cap-alert-td
            {
                border-left:10px solid $govuk-blue;
                background:#fff;
                  a{
                    text-decoration:none;
                    color:$text-colour;
                     cursor:pointer;
                }          
            }
        .overlap-alert
             {
                border-left:10px solid $error-colour;
                background:#fff;
                  a{
                    text-decoration:none;
                    color:$text-colour;
                    cursor:pointer;
                }          
              }
    }
    .finishEditingBtn{margin-bottom:20px;}
}  

.bubble-arrow,.overlap-arrow {display:none;} 
      
.manage-all-apprentices{
  td:nth-of-type(1):before {
        content: "Name";
        font-weight: normal;
        margin-top: 5px;
        min-height: 30px;
        }
        td:nth-of-type(2):before {
        content: "Date of birth";
        font-weight: normal;
        margin-top: 5px;
        }
        td:nth-of-type(3):before {
        content: "Satus";
        font-weight: normal;
        margin-top: 5px;
        word-wrap:break-word;
        } 
    }

.to-be-sent-list{
     td:nth-of-type(1):before {
        content: "Employer";
        font-weight: normal;
        margin-top: 5px;
        min-height: 30px;
        }
        td:nth-of-type(2):before {
        content: "Cohort reference";
        font-weight: normal;
        margin-top: 5px;
        }
        td:nth-of-type(3):before {
        content: "Last message";
        font-weight: normal;
        margin-top: 5px;
        word-wrap:break-word;
        } 
    }
}

